# university-cpp-assignments

./: CMakeLists.txt  README.md
2D_Array.cpp/: array_2Same  condCheck2D  condCheck2D.cpp  matrix  matrix.cpp  matrixSum2D  matrixSum2D.cpp  pesudocode  pesudocode.cpp  prime  prime.cpp  str  str.cpp
Assignment 2/: assignment_2  assignment_2.cpp
Assignment-1/: assignment1  assignment1.cpp
