cmake_minimum_required(VERSION 4.2)
project(university_cpp_assignments)

set(CMAKE_CXX_STANDARD 20)

add_executable(university_cpp_assignments main.cpp
        Assignment-1/assignment1.cpp
        "Assignment 2/assignment_2.cpp"
        2D_Array.cpp/array_2Same.cpp
        2D_Array.cpp/matrixSum2D.cpp)
